2021-10-13 Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/AppKit/NSTabView.h: Update NSTabView.h to have a formal
        protocol for NSTabViewDelegate if the API we are using is 10.6 or
        later.

2021-10-13 Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSTableView.m: Remove exception where lastIndex is greater
        than number of columns.

2021-10-13 Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/Additions/GNUstepGUI/GSTheme.h: Add tabview enum
	* Source/GSAutocompleteWindow.h: Fix signature mismatch
	* Source/GSThemeDrawing.m: Move tabview enum to header.

2021-10-12 Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSBitmapImageRep.m: Change initWithBitmapDataPlanes:...
        to conform to Apple documented behavior and return nil if it
        cannot initialize with the given arguments.

2021-10-03 Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/AppKit/NSComboBox.h: Add check to see if @optional
        is available.

2021-10-02 Gregory John Casamento <greg.casamento@gmail.com>

	* Source/GSToolTips.m: Use RELEASE and AUTORELEASE macros where
	appropriate.  Minor fixes.
	* Source/NSPopover.m: Add code to draw an outline outside of the
	view.  Add GSPopoverPanel and GSPopoverView private classes.

2021-09-30 Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSPopover.m: Fix an issue with NSPopover loading the
	model (nib/xib/gorm) when it is loaded by a setContentViewController:
	in an non-storyboard based application.

2021-09-29 Gregory John Casamento <greg.casamento@gmail.com>

	* TextConverters/RTF/RTFConsumer.m: Improve error message for
	when a field being added to the RTF document is NULL.

2021-09-29 Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/AppKit/NSComboBox.h: Add @optional to protocol
	declarations for NSComboBoxDelegate and NSComboBoxDataSource.

2021-06-17 Riccardo Mottola <rm@gnu.org>

	* Source/NSHelpPanel.m: (initWithContentRect)