@@ -1,5 +1,10 @@
 2021-10-13 Gregory John Casamento <greg.casamento@gmail.com>
 
+	* Headers/AppKit/NSToolbar.h: Update to use formal protocol if
+        API level is 10.6+.
+
+2021-10-13 Gregory John Casamento <greg.casamento@gmail.com>
+
 	* Headers/AppKit/NSTabView.h: Update NSTabView.h to have a formal
         protocol for NSTabViewDelegate if the API we are using is 10.6 or
         later.
